Trying bigger memory options and reload support… (fingers crossed)